--- a/app/page.css
+++ b/app/page.css
@@ -19,6 +19,10 @@
   padding: 0 20px 0 60px;
 }
 
+.newsletter-img-mobile {
+  display: none;
+}
+
 .content-box {
   display: flex;
   flex-direction: column;
@@ -94,4 +98,78 @@
   font-size: 12px;
   color: red;
   font-family: var(--regular-font);
+}
+
+@media screen and (max-width: 768px) {
+  .newsletter {
+    width: 95%;
+    height: 70%;
+    padding: 0 20px 0 25px;
+  }
+
+  .content-box {
+    height: 500px;
+    width: 300px;
+  }
+
+  .content-box h1 {
+    font-size: 50px;
+  }
+
+  .content-box p {
+    font-size: 15px;
+  }
+
+  .newsletter-img-desktop {
+    width: 360px;
+  }
+
+  .form input {
+    font-size: 14px;
+    margin-top: 10px;
+  }
+
+  .form button {
+    font-size: 14px;
+    margin-top: 20px;
+
+  }
+
+}
+
+@media screen and (max-width: 425px) {
+  .newsletter {
+    width: 95%;
+    height: 95%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0;
+    overflow: hidden;
+  }
+
+  .newsletter-img-mobile {
+    display: block;
+    width: 405px;
+    height: 305px;
+    margin-top: -2px;
+  }
+
+  .newsletter-img-desktop {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .newsletter {
+    border-radius: 25px;
+  }
+
+  .content-box {
+    width: 280px;
+  }
+
+  .content-box h1 {
+    font-size: 45px;
+  }
 }
